style.css
* {
    box-sizing: border-box;
    margin: 0px;
    padding: 0px;
    font-size: 10px;
}

:root {
    --background-color: rgb(255, 255, 255);
    --background-color-2: rgb(245, 245, 245);
    --grey-color: rgb(96, 96, 96);
    --dark-grey-color: rgb(23, 23, 23);
    --title-font: 'Unbounded', 'Arial';
    --text-font: 'Open+Sans', 'Arial';
    --green-lighter: rgb(105, 152, 61);
    --green-darker: rgb(75 107 43);
    --shadow: 3px 3px 10px 10px rgba(104, 104, 104, 0.295);
    --footer-background: rgb(8, 51, 108);
    --footer-title: rgb(21, 130, 246);
    --footer-signature-background: rgb(18, 33, 52);
}

html {
    width: 100vw;
    overflow-x: hidden;
}

.wrapper {
    width: 100%;
}

/* mobile-first */
/* very small screen portrait */
/* tested on iPhone SE5, BlackBerry Z30 (small) */

.nav-bar {
    position: fixed;
    top: 0%;
    display: flex;
    justify-content: space-between;
    width: 100vw;
    height: 70px;
    z-index: 2;
    background-color: var(--background-color)
}

.nav-bar .logo1,
.nav-bar .logo2 {
    height: 100%;
    width: 30%;
}

.nav-bar .logo img {
    height: 100%;
}

.nav-bar .hamburger {
    width: 80px;
    position: relative;
}

.nav-bar .hamburger i {
    position: absolute;
    display: block;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    font-size: 2rem;
}

.introduction {
    display: flex;
    position: relative;
    margin-top: 70px;
    z-index: 1;
    flex-direction: column;
    justify-content: space-around;
    width: 100%;
    height: 90vh;
    background-image: url(./images/backgrounds/drewniany-dom-ogrod-mobile-small-portrait.jpg);
    background-repeat: no-repeat;
    background-size: cover;
}

.introduction h1 {
    font-family: var(--title-font);
    color: var(--background-color);
    font-size: 2.3rem;
    padding: 10px 20px;
    letter-spacing: 2px;
    line-height: 120%;
    font-weight: 900;
    text-align: center;
}

.introduction p {
    font-family: var(--title-font);
    color: var(--background-color);
    padding: 10px 20px 10px 20px;
    letter-spacing: 1.5px;
    line-height: 150%;
    font-size: 1.3rem;
    font-weight: 800;
    text-align: center;
}

.introduction button,
.service button {
    position: relative;
    width: 65%;
    margin: 0 auto 10px auto;
    font-family: var(--title-font);
    background-color: var(--green-darker);
    height: 40px;
    border: none;
    border-radius: 1%;
    font-size: 1.2rem;
    color: var(--background-color);
    font-weight: 600;
    letter-spacing: 1.5px;
    cursor: pointer;
}

.introduction button span {
    position: absolute;
    display: block;
    top: 0%;
    left: 50%;
    color: var(--background-color);
    animation: arrow 3s infinite linear;
}

.introduction button span i {
    position: absolute;
    font-size: 1.5rem;
    transform: translate(-50%, -150%);
}

.what-we-do {
    position: relative;
    background-color: var(--background-color-2);
    width: 100vw;
    font-family: var(--title-font);
    color: var(--dark-grey-color);
    margin-bottom: 30px;
}

.what-we-do .slider {
    position: relative;
    margin: 6vw 0px;
    top: 0%;
    left: 50%;
    transform: translateX(-50%);
    height: 400px;
    width: 88%;
    border: none;
    border-radius: 1% 2%;
    overflow: hidden;
    box-shadow: var(--shadow);
}

.what-we-do .slider img {
    opacity: 0;
    transition: 1s linear;
    width: 100%;
    height: 100%;
    object-fit: cover;

}

.what-we-do .slider img.active {
    opacity: 1;
}

.what-we-do h2,
.opinions h2 {
    color: var(--dark-grey-color);
    font-size: 3.5rem;
    font-weight: 400;
    padding: 20px 8vw;
}

.what-we-do .small-title {
    display: flex;
    flex-direction: row;
    width: 84vw;
}

.what-we-do .small-title span {
    position: relative;
    margin-left: 8vw;
    border-bottom: 1px solid var(--dark-grey-color);
    transform: translateY(-50%);
    width: 45%;
}

.what-we-do .small-title p {
    padding-left: 10px;
    font-size: 1.4rem;
}

.what-we-do .short-list ul {
    margin: 20px 8vw 20px 12vw;

}

.what-we-do .short-list ul li {
    font-weight: 300;
    font-size: 1.6rem;
    padding: 5px;
    letter-spacing: 1.5px;
}

.full-list-services {
    position: relative;
    background-color: var(--background-color);
    width: 100vw;
    font-family: var(--title-font);
    color: var(--dark-grey-color);
}

.full-list-services h2 {
    font-size: 2rem;
    text-align: center;
    margin: 30px 0px;
}

.full-list-services .service {
    display: flex;
    flex-direction: column;
    width: 100vw;
    margin: 40px 0px;
    background-color: var(--background-color-2);
}

.full-list-services .service .img-of-service {
    width: 85%;
    height: 200px;
    overflow: hidden;
    margin: 20px auto;
    border-radius: 1%;

}

.full-list-services .service .img-of-service img {
    width: 100%;
}

.full-list-services .service h3 {
    font-size: 2rem;
}

.full-list-services .service h3,
.full-list-services .service p,
.full-list-services .service p strong {
    padding: 0px 7.5vw;
    font-size: 1.3rem;
    transform: none;
    text-align: left;
    display: inline;
    letter-spacing: 1.5px;
    line-height: 150%;
}

.full-list-services .service p strong {
    padding: 0px;
}

.full-list-services .service button {
    margin-top: 25px;
    margin-bottom: 25px;
}

.opinions {
    position: relative;
    background-color: var(--background-color-2);
    width: 100vw;
    font-family: var(--title-font);
    color: var(--dark-grey-color);
}

.opinions p {
    padding: 0px 20px;
    font-size: 1.2rem;
    letter-spacing: 2.2px;
    line-height: 130%;
    z-index: 3;
}

.opinions .opinion {
    position: relative;
    margin: 30px 0px;
    height: 600px;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

section.opinions>div:nth-child(4) {
    background-image: url(./images/opinions/podlewanie-ogrodu.jpg);
}
/* ... */

